[package]
name = "umbra"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
datafusion = { version = "38", features = ["default"] }
parquet = "51"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
anyhow = "1.0"
thiserror = "1.0"
